Fixed user name vertical align alogn browsers test #374.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -117,7 +117,7 @@ header {
         }
     }
     .user-info {
-        height: 108px;
+		top:25px;
         text-align: right;
         .client-name {
             border-right: 1px solid @lightgrey;
@@ -130,9 +130,8 @@ header {
             padding: 9px 28px;
             position: relative;
             text-overflow: ellipsis;
-            top: 50%;
-            transform: translateY(-50%);
-            white-space: nowrap;
+			vertical-align:middle;
+			white-space: nowrap;
             width: 60%;
             @media (max-width: 767px) {
                 border-right: none;
@@ -149,8 +148,7 @@ header {
         .user-wrapper {
             display: inline-block;
             position: relative;
-            top: 20%;
-            transform: translateY(-20%);
+			vertical-align:middle;
             @media (max-width: 767px) {
                 border-top: 1px solid @lightgrey;
                 clear: both;
